---------------------------------------------------------------------------------------------------
Version: 0.16.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.16.2
Date: 2025-01-24
  Bugfixes:
    - Fixed that `flib_locale.of_item` would not accept all item subtypes.
    - Fixed that `flib_locale.of_recipe` would incorrectly return the main product name in some cases.
---------------------------------------------------------------------------------------------------
Version: 0.16.1
Date: 2025-01-20
  Optimizations:
    - Improved performance of `flib_prototypes.all()`.
  Bugfixes:
    - Fixed a crash when using `flib_gui_templates.technology_slot()`.
---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: 2024-12-16
  Features:
    - Added `flib_locale` module with various utilities for deducing the localised names of prototypes in the prototype stage.
    - Added `flib_prototypes` module with various utilities for getting prototypes from data.raw.
    - Added `flib_position.abs()`.
  Bugfixes:
    - Removed icon mipmaps properties from `data-util`; icon mipmaps are now automatically deduced by the game engine.
    - Fixed a crash when attempting to use the `gui-templates` module due to an outdated require path. (#72)
    - Fixed that `flib_direction.from_positions` did not work correctly. (#74)
    - Fixed that `flib_migration.on_config_changed` would run migrations unnecessarily. (#71, #73)
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 2024-10-14
  Features:
    - Added support for ronna and quetta SI prefixes to `flib_format.number`.
  Changes:
    - Updated to Factorio 2.0.
    - Removed `flib_direction.north` etc. constants. Use `defines.direction` instead.
    - Renamed `gui-lite` to `gui`, and `dictionary-lite` to `dictionary`.