@@ -2,6 +2,7 @@
 Version: 0.16.3
 Date: ????
   Changes:
+    - Improved error messaging of flib_prototypes functions.
 ---------------------------------------------------------------------------------------------------
 Version: 0.16.2
 Date: 2025-01-24
